--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@opentelemetry/sdk-metrics": "^2.1.0",
     "@opentelemetry/sdk-node": "^0.206.0",
     "@opentelemetry/sdk-trace-node": "^2.1.0",
+    "@types/axios": "^0.9.36",
+    "axios": "^1.12.2",
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "cors": "^2.8.5",
@@ -49,6 +51,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
+    "reflect-metadata": "^0.2.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "tscpaths": "^0.0.9",
