--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
+    "light-node-metrics": "^1.0.4",
     "reflect-metadata": "^0.2.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
