--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/plugin-proposal-decorators": "^7.23.7",
     "@babel/preset-env": "^7.23.7",
     "@babel/preset-typescript": "^7.18.6",
+    "@enclavex/logger": "^1.0.2",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.65.0",
     "@opentelemetry/exporter-prometheus": "^0.206.0",
