--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     container_name: metrics-reader
     network_mode: bridge
     working_dir: /usr/src/app
+    mem_limit: 512m
     volumes:
       - ./:/usr/src/app
     ports:
